# library-management-api/controllers/booksController.js
@@ -2,7 +2,6 @@ import Book from "../models/Book.js";
 
 
 
-
 // GET ALL BOOKS
 
 export async function getBooks(req,res){
@@ -13,16 +12,20 @@ try{
 const books = await Book.find();
 
 
+
 res.status(200).json(books);
 
 
 
-}catch(error){
+}
+
+catch(error){
 
 
 res.status(500).json({
 
-message:error.message
+message:"Error retrieving books",
+error:error.message
 
 });
 
@@ -30,31 +33,34 @@ message:error.message
 }
 
 }
-
 
 
 
 
 // GET SINGLE BOOK
 
+
 export async function getBook(req,res){
+
 
 try{
 
 
 const book = await Book.findById(
-    req.params.id
+req.params.id
 );
 
 
 
 if(!book){
 
+
 return res.status(404).json({
 
 message:"Book not found"
 
 });
+
 
 }
 
@@ -64,20 +70,24 @@ res.status(200).json(book);
 
 
 
-}catch(error){
+}
+
+catch(error){
 
 
 res.status(500).json({
 
-message:error.message
+message:"Error retrieving book",
+error:error.message
 
 });
 
 
 }
 
-}
 
+
+}
 
 
 
@@ -86,24 +96,49 @@ message:error.message
 
 // CREATE BOOK
 
+
 export async function createBook(req,res){
+
 
 try{
 
 
-const book = new Book(req.body);
+const book = new Book({
+
+title:req.body.title,
+
+isbn:req.body.isbn,
+
+author:req.body.author,
+
+category:req.body.category,
+
+publisher:req.body.publisher,
+
+publicationYear:req.body.publicationYear,
+
+pages:req.body.pages,
+
+language:req.body.language,
+
+available:req.body.available
+
+});
 
 
 
+const savedBook =
 await book.save();
 
 
 
-res.status(201).json(book);
+res.status(201).json(savedBook);
 
 
 
-}catch(error){
+}
+
+catch(error){
 
 
 
@@ -118,8 +153,9 @@ error:error.message
 
 }
 
-}
 
+
+}
 
 
 
@@ -128,12 +164,15 @@ error:error.message
 
 // UPDATE BOOK
 
+
 export async function updateBook(req,res){
+
 
 try{
 
 
-const book = await Book.findByIdAndUpdate(
+const updatedBook =
+await Book.findByIdAndUpdate(
 
 req.params.id,
 
@@ -148,7 +187,7 @@ runValidators:true
 
 
 
-if(!book){
+if(!updatedBook){
 
 
 return res.status(404).json({
@@ -162,11 +201,13 @@ message:"Book not found"
 
 
 
-res.status(200).json(book);
+res.status(200).json(updatedBook);
 
 
 
-}catch(error){
+}
+
+catch(error){
 
 
 res.status(400).json({
@@ -180,6 +221,7 @@ error:error.message
 
 }
 
+
 }
 
 
@@ -189,26 +231,29 @@ error:error.message
 
 // DELETE BOOK
 
+
 export async function deleteBook(req,res){
+
 
 try{
 
 
-const book = await Book.findByIdAndDelete(
-
+const deletedBook =
+await Book.findByIdAndDelete(
 req.params.id
-
 );
 
 
 
-if(!book){
+if(!deletedBook){
+
 
 return res.status(404).json({
 
 message:"Book not found"
 
 });
+
 
 }
 
@@ -222,16 +267,23 @@ message:"Book deleted successfully"
 
 
 
-}catch(error){
+}
+
+catch(error){
+
 
 
 res.status(500).json({
 
-message:error.message
+message:"Unable to delete book",
+
+error:error.message
 
 });
 
 
 }
+
+
 
 }
