# library-management-api/routes/authRoutes.js
@@ -4,35 +4,58 @@ import express from "express";
 import {
 
 register,
+
 login,
+
 logout
 
-} from "../controllers/authController.js";
+}
+
+from "../controllers/authController.js";
 
 
 
-const router = express.Router();
+const router =
+express.Router();
 
 
-
-router.post(
-    "/register",
-    register
-);
-
-
-
-router.post(
-    "/login",
-    login
-);
 
 
 
 router.post(
-    "/logout",
-    logout
+
+"/register",
+
+register
+
 );
+
+
+
+
+
+router.post(
+
+"/login",
+
+login
+
+);
+
+
+
+
+
+router.post(
+
+"/logout",
+
+logout
+
+);
+
+
+
 
 
 
