# library-management-api/server.js
@@ -1,6 +1,7 @@
 import express from "express";
-import mongoose from "mongoose";
 import dotenv from "dotenv";
+import mongoose from "mongoose";
+import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./swagger/swagger.json" with { type: "json" };
 
@@ -8,126 +9,74 @@ import booksRoutes from "./routes/booksRoutes.js";
 import authorsRoutes from "./routes/authorsRoutes.js";
 import authRoutes from "./routes/authRoutes.js";
 
-
-// Load environment variables
 dotenv.config();
-
-
-// Temporary JWT debug log
-console.log(
-    "Loaded JWT_SECRET:",
-    process.env.JWT_SECRET
-);
-
-
 
 const app = express();
 
-
-// Middleware
+app.use(cors());
 app.use(express.json());
 
 
+// DATABASE
 
-// Swagger
+mongoose
+  .connect(process.env.MONGODB_URI)
+  .then(() => {
+    console.log("Connected to MongoDB");
+  })
+  .catch((error) => {
+    console.log(
+      "Database Error:",
+      error.message
+    );
+  });
+
+
+// ROUTES
+
 app.use(
-    "/api-docs",
-    swaggerUi.serve,
-    swaggerUi.setup(swaggerDocument)
+  "/books",
+  booksRoutes
+);
+
+app.use(
+  "/authors",
+  authorsRoutes
+);
+
+app.use(
+  "/auth",
+  authRoutes
 );
 
 
+// SWAGGER
 
-// Authentication Routes
-app.use("/auth", authRoutes);
-
-
-
-// Protected CRUD Routes
-app.use("/books", booksRoutes);
-
-app.use("/authors", authorsRoutes);
+app.use(
+  "/api-docs",
+  swaggerUi.serve,
+  swaggerUi.setup(swaggerDocument)
+);
 
 
+// ERROR HANDLER
 
-// Home Route
-app.get("/", (req, res) => {
-
-    res.send(
-        "Library Management API Running"
-    );
-
-});
-
-
-
-// 404 Handler
-app.use((req, res) => {
-
-    res.status(404).json({
-
-        message: "Route not found"
-
-    });
-
-});
-
-
-
-// Error Handler
-app.use((err, req, res, next) => {
-
-
-    console.error(err);
-
-
+app.use(
+  (error, req, res, next) => {
     res.status(500).json({
-
-        message: "Internal Server Error"
-
+      message: error.message
     });
+  }
+);
 
 
-});
+// SERVER
 
+const PORT =
+  process.env.PORT || 3000;
 
-
-// Port
-const PORT = process.env.PORT || 3000;
-
-
-
-// MongoDB Connection
-mongoose.connect(process.env.MONGODB_URI)
-
-.then(() => {
-
-
-    console.log(
-        "Connected to MongoDB"
-    );
-
-
-    app.listen(PORT, () => {
-
-
-        console.log(
-            `Server running at http://localhost:${PORT}`
-        );
-
-
-    });
-
-
-})
-
-.catch(error => {
-
-
-    console.error(
-        "MongoDB connection error:",
-        error
-    );
-
-
+app.listen(PORT, () => {
+  console.log(
+    `Server running at http://localhost:${PORT}`
+  );
 });
